package ca.mcmaster.se2aa4.mazerunner;

public enum Direction {
    N,

    E,

    S,

    W
  
}
